# ekphos

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  flake.nix
config/: authorized_keys
src/: clipboard.rs  config.rs  highlight.rs  journal.rs  main.rs  theme.rs
src/app/: state.rs  welcome_notes.rs
src/bidi/: mod.rs
src/editor/: cursor.rs  mod.rs
src/event/: handler.rs
src/graph/: mod.rs
src/ui/: content.rs  context_menu.rs  dialogs.rs  editor.rs  graph_view.rs  mod.rs  outline.rs  sidebar.rs  status_bar.rs  theme_picker.rs  toast.rs  wiki_autocomplete.rs
src/vim/: command.rs  find.rs  macro_record.rs  marks.rs  mod.rs  mode.rs  motion.rs  operator.rs  register.rs  text_object.rs
themes/: catppuccin-mocha.toml  ekphos-dawn.toml  kanagawa.toml
