[package]
name = "ekphos"
version = "0.20.10"
edition = "2021"
authors = ["Ekphos Contributors"]
description = "A lightweight, fast, terminal-based markdown research tool inspired by Obsidian"
license = "MIT"
repository = "https://github.com/hanebox/ekphos"
keywords = ["markdown", "tui", "terminal", "notes", "obsidian"]
categories = ["command-line-utilities", "text-editors"]
readme = "README.md"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
image = "0.25"
ratatui-image = { version = "10.0", default-features = false, features = ["image-defaults", "crossterm"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
shellexpand = "3.1"
ureq = "2.9"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
unicode-width = "0.2"
htmd = "0.5"
clipboard-rs = "0.3"
serde_yaml = "0.9"
bincode = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
